Minor corrections to 530 and 532

--- a/tip/530.md
+++ b/tip/530.md
@@ -4,7 +4,7 @@
 	Type:           Project
 	Vote:           Pending
 	Created:        13-Dec-2018
-	Tcl-Version:	8.6, 8.7
+	Tcl-Version:	8.6
 	Post-History:
 	Tcl-Ticket:     a09031e288
 -----
@@ -66,7 +66,7 @@ variable in their flows) they won't notice any change in behavior.
 # Reference Implementation
 
 A reference implementation is provided at
-<https://core.tcl.tk/tcl/artifact/3b68b7cd8131a42a> .
+<https://core.tcl-lang.org/tcl/artifact/3b68b7cd8131a42a> .
 
 # Copyright
 
