--- a/tip/532.md
+++ b/tip/532.md
@@ -6,7 +6,7 @@
 	Created:        09-Jan-2019
 	Post-History:  
 	Keywords:       Tk, bind, event, event loop
-	Tcl-Version:    8.6 and 8.7
+	Tcl-Version:    8.6
 	Tk-Branch:      bug6e8afe516d
 ----
 
@@ -23,7 +23,7 @@ unlimited. Moreover new implementation is more efficient (in time), and all know
 issues in event handling have been eliminated.
 
 This project (re-implementing the event loop handling) has been started with error report
-[Severe bugs in binding (tkBind.c)](https://core.tcl-lang.org/tk/tktview/6e8afe516df85f6213f436ef7c2fab2ec2d11c76).
+[Severe bugs in binding (tkBind.c)](/tk/tktview/6e8afe516df85f6213f436ef7c2fab2ec2d11c76).
 
 # Rationale
 
@@ -31,7 +31,7 @@ The following problems, caused by event ring overflow, have been solved:
 
 1. Sometimes double-clicks with mouse will not be detected, nothing happens although this
 event is bound (see test case
-[bind-32.2](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6123-6143)).
+[bind-32.2](/tk/artifact/6377cb0d762b7261?ln=6123-6143)).
 This problem occurs often in application [Scidb](http://scidb.sourceforge.net),
 because this application is using tooltips heavily, causing a lot of intervening
 expose events.
@@ -39,7 +39,7 @@ expose events.
 2. Immediately after startup of application [Scidb](http://scidb.sourceforge.net)
 (same with applications [Scid](http://scid.sourceforge.net), and
 [Scid vs PC](http://scidvspc.sourceforge.net))
-it's not possible to open the menu via a shortcut like \<Alt-m\>. This event will be
+it's not possible to open the menu via a shortcut like `<Alt-m>`. This event will be
 gobbled, because of many intervening events, causing an event ring overflow.
 
 3. After switching a tab pane in a notebook window the tab is losing the focus sometimes.
@@ -48,19 +48,19 @@ This has been observed in applications [Scid](http://scid.sourceforge.net), and
 
 Moreover the following issues have been solved:
 
-1. It's possible to bind an event like <code>\<Quadruple-1\></code>, but it's nearly impossible to
+1. It's possible to bind an event like `<Quadruple-1>`, but it's nearly impossible to
 trigger this event (with mousepad). Even a triple-click is not so easy. This behavior is
 user-unfriendly, and it seems that it is caused by an erroneous implementation.
 
-2. If a statement like <code>event generate . \<1\></code> is executed, and after some time
+2. If a statement like `event generate . <1>` is executed, and after some time
 (\> 500 ms) this statement is executed again, then it's likely that a double-click event
 will be triggered, even if a single-click event is expected, because the triggering
 of double-click events has to fit time requirements (due to manual; see test case
-[bind-32.4](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6158-6171)).
+[bind-32.4](/tk/artifact/6377cb0d762b7261?ln=6158-6171)).
 
-3. <code>event generate . \<FocusIn\> -sendevent 1</code> is not working, the argument of
-<code>sendevent</code> get lost (test case
-[bind-32.6](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6192-6204)).
+3. `event generate . <FocusIn> -sendevent 1` is not working, the argument of
+`sendevent` gets lost (test case
+[bind-32.6](/tk/artifact/6377cb0d762b7261?ln=6192-6204)).
 
 4. See following code:
 
@@ -70,18 +70,18 @@ of double-click events has to fit time requirements (due to manual; see test cas
 		event generate . <1> -x 0 -y 0 -time 0
 		set x
 
-	This gives the result <code>11</code>, but <code>Double</code> is expected, because the time
+	This gives the result `11`, but `Double` is expected, because the time
 	(and space) constraints for a double click are fulfilled. With other words, the legacy
 	implementation is not preferring the most specialized event. But it should, because the manual
-	says (<code>man bind</code>):
+	says (`man bind`):
 
 	> If more than one binding matches a particular event and they have the
 	> same tag, then the most specific binding is chosen and its script is
 	> evaluated.
 
-	And the sequence <code>\<Double-1\></code> is more specific than <code>\<1\>\<1\></code> because
-	of time and space requirements (in <code>\<Double-1\></code>). Note that constant
-	<code>PREFER\_MOST\_SPECIALIZED\_EVENT=1</code> has to be set when compiling to enable this
+	And the sequence `<Double-1>` is more specific than `<1><1>` because
+	of time and space requirements (in `<Double-1>`). Note that constant
+	`PREFER_MOST_SPECIALIZED_EVENT=1` has to be set when compiling to enable this
 	new feature.
 
 5. Legacy implementation cannot handle homogeneous equal sequences properly, see this script:
@@ -92,7 +92,7 @@ of double-click events has to fit time requirements (due to manual; see test cas
 		event generate . <Control-1>
 		set x
 	
-	Manual (<code>man bind</code>) says:
+	Manual (`man bind`) says:
 
 	> If these tests fail to determine a winner, then the most recently registered
 	> sequence is the winner.
@@ -104,7 +104,7 @@ Legacy code also suffers from causing memory holes, revised implementation is te
 to be memory friendly.
 
 The revised implementation supports an additional syntax for binding motion events
-(if constant <code>SUPPORT\_ADDITIONAL\_MOTION\_SYNTAX=1</code> is set when compiling). E.g.,
+(if constant `SUPPORT_ADDITIONAL_MOTION_SYNTAX=1` is set when compiling). E.g.,
 the following bindings
 
 	bind . <B2-Motion> { ... }  
@@ -116,45 +116,44 @@ can be expressed in a different way:
 	bind . <Motion-1-2> { ... }
 
 The additional syntax is easier to remember, because button press/release events will also
-be expressed in the latter form, for example <code>bind . \<ButtonPress-1></code>. The former
-syntax (<code>\<B2-Motion></code>) form will still be supported.
+be expressed in the latter form, for example `bind . <ButtonPress-1>`. The former
+syntax (`<B2-Motion>`) form will still be supported.
 
 # Specification
 
-The whole handling in file <code>general/tkBind.c</code> has been re-implemented. This implementation
-is passing all test cases in <code>tests/bind.test</code>. Note that legacy implementation is failing
+The whole handling in file `general/tkBind.c` has been re-implemented. This implementation
+is passing all test cases in `tests/bind.test`. Note that legacy implementation is failing
 in some (of the new) test cases.
 
-Issue (1): Legacy implementation is computing the time difference of nth click with first click,
+In Issue (1), the legacy implementation is computing the time difference of nth click with first click,
 and tests whether it is less than 500 ms. But this seems to be an implementation bug. Revised
 implementation computes the difference of nth and (n+1)th clicks. This behavior also conforms
 better to the behavior of other toolkits. With new implementation the use of quadruple clicks
 (and triple clicks) is unproblematic. See also test case
-[bind-32.6](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6172-6191).
+[bind-32.6](/tk/artifact/6377cb0d762b7261?ln=6172-6191).
 
-Isue (2) is only a minor bug, and there exists a work-around. But the author decided to
+Issue (2) is only a minor bug, and there exists a work-around. But the author decided to
 eliminate this design bug, with revised implementation option **-time** is recognizing new
 special value **current**, and is using the current event time in this case. This extension
 is fully backward compatible. See also test case
-[bind-32.4](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6158-6171).
+[bind-32.4](/tk/artifact/6377cb0d762b7261?ln=6158-6171).
 
 For the fix of issue (3) the author decided that non-zero values (given with option
 **-send_event**) will be converted to **1**. This is conform to the manual, see
 `man bind` (search for **Sendevent**), see also lines 3287ff in legacy file
-[generic/tkBind.c](http://core.tcl.tk/tk/artifact/e41f45f7f6ac3447?ln=3287-3307).
+[generic/tkBind.c](/tk/artifact/e41f45f7f6ac3447?ln=3287-3307).
 
 The fix of issue (4) is not fully backwards compatible. But in the author's opinion this is not
-a real problem, nobody is using sequences like <code>\<1\>\<1\></code>, it is not expected that
+a real problem, nobody is using sequences like `<1><1>`, it is not expected that
 applications have to be adjusted.
 
 Fix of issue (5) is correcting a major bug, see test case
-[bind-33.13](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6550-6566).
+[bind-33.13](/tk/artifact/6377cb0d762b7261?ln=6550-6566).
 
 # Implementation
 
-Please refer to the
-[bug6e8afe516d](https://core.tcl-lang.org/tk/timeline?r=bug6e8afe516d)
-branch of the core Tcl repository.
+Please refer to the [bug6e8afe516d](/tk/timeline?r=bug6e8afe516d) branch of
+the core Tcl repository.
 
 The event ring has been removed. Revised implementation is working with promoted
 event bindings, and remembers the latest event per event type. This technique works
@@ -167,14 +166,14 @@ triple-nested). Furthermore the traversed lists are shorter than with legacy imp
 because the event ring, always containing 30 items (or even 45 on Mac), has been eliminated.
 Only unbinding a tag is a bit slower than before. Memory consumption did not change significantly.
 
-Branch [bug6e8afe516d](https://core.tcl-lang.org/tk/timeline?r=bug6e8afe516d)
-has <code>PREFER\_MOST\_SPECIALIZED\_EVENT=0</code> and
-<code>SUPPORT\_ADDITIONAL\_MOTION\_SYNTAX=0</code>.
+Branch [bug6e8afe516d](/tk/timeline?r=bug6e8afe516d)
+has `PREFER_MOST_SPECIALIZED_EVENT=0` and
+`SUPPORT_ADDITIONAL_MOTION_SYNTAX=0`.
 It targets 8.6 and is intended to be merged into core-8-6-branch.
 
-Branch [bug6e8afe516d-87](https://core.tcl-lang.org/tk/timeline?r=bug6e8afe516d-87)
-has <code>PREFER\_MOST\_SPECIALIZED\_EVENT=1</code> and
-<code>SUPPORT\_ADDITIONAL\_MOTION\_SYNTAX=1</code>.
+Branch [bug6e8afe516d-87](/tk/timeline?r=bug6e8afe516d-87)
+has `PREFER_MOST_SPECIALIZED_EVENT=1` and
+`SUPPORT_ADDITIONAL_MOTION_SYNTAX=1`.
 It targets 8.7 and is intended to be merged into trunk.
 
 # Backwards Compatibility
@@ -187,7 +186,7 @@ corrected.
 Beside these two exceptions the revised implementation is fully backwards compatible, even
 if the additional syntax style for motion bindings is enabled.
 
-If constant <code>PREFER\_MOST\_SPECIALIZED\_EVENT=1</code> is defined (prefer most specific
+If constant `PREFER_MOST_SPECIALIZED_EVENT=1` is defined (prefer most specific
 binding in term of most high-ordered patterns), then the guidance in manual of **bind**,
 how to choose the most specific binding, has to be changed:
 
