Mark TIP 1 as no longer relevant

--- a/tip/1.md
+++ b/tip/1.md
@@ -1,10 +1,11 @@
 # TIP 1: TIP Index
 	Author:         TIP Editor <donal.fellows@cs.man.ac.uk>
-	State:          Active
+	State:          Withdrawn
 	Type:           Informational
 	Vote:           No voting
 	Created:        14-Sep-2000
 	Post-History:
+	Obsoleted-By:   386
 -----
 
 # Abstract
