Updated location of TIP 530 implementation

--- a/tip/530.md
+++ b/tip/530.md
@@ -6,7 +6,7 @@
 	Created:        13-Dec-2018
 	Tcl-Version:	8.6
 	Post-History:
-	Tcl-Ticket:     a09031e288
+	Tcl-Branch:     tip-530
 -----
 
 # Abstract
