Mention that 530 can be controlled through configure too.

--- a/tip/530.md
+++ b/tip/530.md
@@ -39,13 +39,13 @@ This TIP now proposes to put the execution of the respective part of
 
 The environment variable `TCL_INFO_FRAME_ENABLE_ACCURATE_LINE_NUMBERS` is
 checked during the startup of the main Tcl interpreter and handling of line
-continuations is fixed till the end of execution as follows:
+continuations is fixed (until the end of execution of the process) as follows:
 
-* If the value of that environment variable is 0, then line continuations
+* If the value of that environment variable is the string **0**, then line continuations
   (backslash+newline) sequences are not tracked (thus resulting in improved
   performance) and the line numbers returned by `info frame` may be wrong.
 
-* For any other value of that environment variable the line continuations are
+* For any other value of that environment variable, the line continuations are
   tracked and correct line numbers are reported by `info frame`.
 
 # Build-time control
@@ -56,6 +56,9 @@ compilation macro of the same name. That is a Tcl interpreter built with
 `-DTCL_INFO_FRAME_ENABLE_ACCURATE_LINE_NUMBERS=X` will behave by default
 as if the env var `TCL_INFO_FRAME_ENABLE_ACCURATE_LINE_NUMBERS` is set to `X`
 (but the actual value of that variable, if it is set, will be respected).
+
+The value can be set at configure time (on Unix) via the
+**--enable-line-continuations** option, which defaults to **on**.
 
 ## Default Setting
 
