539 is a duplicate of 341

--- a/tip/539.md
+++ b/tip/539.md
@@ -1,6 +1,6 @@
 # TIP 539: Multiple dict filter patterns
 	Author:         Lars Hellström <Lars.Hellstrom@residenset.net>
-	State:          Draft
+	State:          Withdrawn
 	Type:           Project
 	Vote:           Pending
 	Created:        27-Nov-2008
@@ -8,6 +8,7 @@
 	Keywords:       Tcl, dict filter, set intersection
 	Tcl-Version:	8.7
 	Tcl-Ticket:     2370575
+	Obsoleted-By:   341
 -----
 
 # Abstract
