Add: TIP 545: image photo SVG options: remove -unit and add target height/width option

--- a/tip/545.md
+++ b/tip/545.md
@@ -1,4 +1,4 @@
-# TIP 545: image photo SVG options: remove -unit and add target 
+# TIP 545: image photo SVG options: remove -unit and add target height/width option
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
@@ -84,6 +84,7 @@ The option may not be specified together with "-scale" and/or "-scaletoheight".
 # Implementation
 
 Implementation may start soon with the tag tip-545-svg-options.
+
 
 # Copyright
 
