Tweak testing code for 536

--- a/tip/536.md
+++ b/tip/536.md
@@ -94,6 +94,11 @@ It is necessary for Wish to be running the sourced script for the new commands t
 	proc appPath {} {
 		tk_messageBox -message "The app path is [::tk::mac::GetAppPath]"
 	}
+	
+	proc ::tk::mac::PerformService {} {
+    	set data [clipboard get]
+    	tk_messageBox -message $data
+	}
 
 	proc main {} {
 
