--- a/tip/546.md
+++ b/tip/546.md
@@ -41,6 +41,17 @@ support:
 
 ## Tcl_Size
 
+Many arguments to public Tcl routines characterize the size of some
+other argument in terms of a count of smaller components it contains.
+Any argument like this needs to have a type that meets several criteria.
+
+ * It should be an integral type of the C language, so that basic
+   operations of comparison and arithmetic are available in expected ways.
+
+ * The value *0* must be include in the type **Tcl_Size** so that empty
+   containers can be described.
+
+
 ## Tcl_Idx
 
 # Specification
