--- a/tip/546.md
+++ b/tip/546.md
@@ -51,13 +51,13 @@ Any argument like this needs to have a type that meets several criteria.
  * The value *0* must be included in the type **Tcl_Size** so that empty
    containers can be described.
 
- * A value *TCL_SIZE_MAX* must be defined, indicating the largest size value
+ * A value *TCL\_SIZE\_MAX* must be defined, indicating the largest size value
    included in the **Tcl_Size** type.
 
- * All values between *0* and *TCL_SIZE_MAX* are also supported as meaningful
+ * All values between *0* and *TCL\_SIZE\_MAX* are also supported as meaningful
    sizes in the **Tcl_Size** type.
 
- * Another value *TCL_SIZE_UNKNOWN*, distinct from all those mentioned so far,
+ * Another value *TCL\_SIZE\_UNKNOWN*, distinct from all those mentioned so far,
    is also included in the type **Tcl_Size** as a way to indicate lack of
    knowledge or specification of a size.  This is analogous to the **NULL**
    value for pointers.
