Deprecate a bunch of functions in TIP #542

--- a/tip/542.md
+++ b/tip/542.md
@@ -60,21 +60,39 @@ This document proposes:
  * Deprecate the "unicode" encoding. "utf-16" is supposed to be used in stead. The "unicode" encoding
    will NOT be removed in Tcl 9.0, since it's too common.
 
- * New functions:
+ * Enhance the Tcl\_UniCharToUtfDString() function such that the uniLength parameter is allowed to
+   have the value -1.
+ 
+ * Deprecate the following functions:
 
-     Tcl\_UtfToUtf16()
+     Tcl\_AppendUnicodeToObj()
+
+     Tcl\_GetUnicode()
+
+     Tcl\_GetUnicodeFromObj()
+
+     Tcl\_NewUnicodeObj()
+
+     Tcl\_SetUnicodeObj()
+
+     Tcl\_UniCharCaseMatch()
+
+     Tcl\_UniCharLen()
+
+     Tcl\_UniCharNcmp()
+
+     Tcl\_UniCharNcasecmp()
+
+   If Tcl is compiled with either -DTCL_UTF_MAX=4 or -DTCL_NO_DEPRECATED, those functions will no longer be available for extensions, as well as in Tcl 9.0.
+
+
+ * New functions:
      
      Tcl\_Utf16ToUtfDString()
      
      Tcl\_UtfToUtf16DString()
-     
-     Tcl\_Utf16Len()
-     
-     Tcl\_Utf16Ncmp()
-     
-     Tcl\_Utf16Ncasecmp()
-     
-     Tcl\_Utf16CaseMatch()
+
+     Tcl\_UtfToUtf16()
 
      Those are the same as the _UniChar_ variants, but they use the "unsigned short" type in stead of Tcl\_UniChar.
 
@@ -88,20 +106,15 @@ As long as Tcl is compiled with -DTCL\_UTF\_MAX=3, this is fully upwards compati
 When Tcl is compiled with -DTCL\_UTF\_MAX=4, this is at the Tcl level, compatible with the Androwish-version
 of Tcl with one exception: In Androwish the "unicode" encoding is 32-bit, in Tcl it continues
 to be 16-bit, an alias for "utf-16". At the C-API level, it's upwards compatible with Tcl 8.6 in
-TCL\_UTF\_MAX=6 mode, except for the following 5 functions: Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(),
-Tcl\_GetUnicode(), Tcl\_GetUnicodeFromObj() and Tcl\_AppendUnicodeToObj(). Using any of those 5 functions
-will result in a panic if the extension is compiled in a different mode than Tcl.
+TCL\_UTF\_MAX=6 mode, except for the functions marked above as deprecated. Those functions will be gone.
 
 # Caveats
 
- * If Tcl is compiled with -DTCL\_UTF\_MAX=3, extensions compiled with -DTCL\_UTF\_MAX=4 and which use the
-   Tcl\_UniChar type won't work. This will result in a panic, as soon as one of the 32-bit
-   Tcl\_UniChar functions is called.
+ * Extensions compiled with -DTCL\_UTF\_MAX=4 cannot use any of the deprecated functions mentioned in this TIP.
+   Using any of them results in a link error.
 
- * Internally, there is only one "Unicode" Tcl\_Obj-type. This means that any extension using
-   Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(), Tcl\_GetUnicode(), Tcl\_GetUnicodeFromObj() or
-   Tcl\_AppendUnicodeToObj() MUST be compiled in the same mode as Tcl. Otherwise, a panic results
-   as soon as one of those functions is called.
+ * If Tcl is compiled with -DTCL\_UTF\_MAX=4, the deprecated functions will be gone. Any
+   extension using those, even if the extesion is compiled with -DTCL\_UTF\_MAX=3, won't work any more.
 
 # Reference Implementation
 
