Two TIP's now in voting state. A few accent fixes in other TIP's

--- a/tip/280.md
+++ b/tip/280.md
@@ -397,7 +397,7 @@ current interp, the same limit **info level** is bound by.
 
 # Discussion
 
-A point noted by Lars Hellstrom is that this TIP makes the builtin
+A point noted by Lars Hellström is that this TIP makes the builtin
 **source** command special. It is not possible anymore to re-create
 **source** purely in Tcl, doing so will loose the name of the file. We are
 still tracking line numbers, but they are then relative to the start of the
