--- a/tip/312.md
+++ b/tip/312.md
@@ -1,5 +1,5 @@
 # TIP 312: Add More Link Types
-	Author:         Rene Zaumseil <r.zaumseil@freenet.de>
+	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	Author:         Larry W. Virden <lvirden@yahoo.com>
 	State:          Final
 	Type:           Project
