--- a/tip/537.md
+++ b/tip/537.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           In progress
 	Created:        7-April-2019
 	Post-History:   
 	Keywords:       Tcl
