--- a/tip/544.md
+++ b/tip/544.md
@@ -4,7 +4,7 @@
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           Pending
+	Vote:           In progress
 	Created:        15-May-2019
 	Post-History:
 	Discussions-To: Tcl Core list
