--- a/tip/537.md
+++ b/tip/537.md
@@ -19,7 +19,7 @@ Tcl_RegExpIndices`, such that the fields indicating indexes change from type
 # Rationale
 
 This TIP should have been part of [TIP #502](502.md) (Index Value Reform) and/or [TIP #494](494.md) (More use of `size_t` in Tcl 9), but it was overlooked. Without changing this public API, regular expression
-indexes never can exceed 2G in value.
+indexes never can exceed 2GiB in value.
 
 # Specification and Documentation
 
@@ -42,7 +42,7 @@ This macro will be provided to 8.7 as well, but in Tcl 8.7 it will have the valu
 
 # Implementation
 
-An implementation of this TIP is present in the [regexp-api-64bit](https://core.tcl-lang.org/tcl/timeline?r=regexp-api-64bit) branch. 
+An implementation of this TIP is present in the [regexp-api-64bit](/tcl/timeline?r=regexp-api-64bit) branch. 
 
 # Copyright
 
