--- a/tip/544.md
+++ b/tip/544.md
@@ -11,7 +11,6 @@
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-544
-
 -----
 
 # Abstract
@@ -19,18 +18,18 @@
 This TIP proposes to export the internal function `TclGetIntForIndex()`
 as `Tcl_GetIntForIndex()`. The signature is:
 
-  * int Tcl\_GetIntForIndex(Tcl\_Interp *interp, Tcl\_Obj *objPtr,
-	    int endValue, int *indexPtr)
+  * int **Tcl\_GetIntForIndex**(Tcl\_Interp \*_interp_, Tcl\_Obj \*_objPtr_,
+	    int _endValue_, int \*_indexPtr_)
 
-For Tcl 9.0, all indexes have type size\_t, so there the signature is:
+For Tcl 9.0, all indexes have type `size_t`, so there the signature is:
 
-  * int Tcl\_GetIntForIndex(Tcl\_Interp *interp, Tcl\_Obj *objPtr,
-	    size\_t endValue, size\_t *indexPtr)
+  * int **Tcl\_GetIntForIndex**(Tcl\_Interp \*_interp_, Tcl\_Obj \*_objPtr_,
+	    size\_t _endValue_, size\_t \*_indexPtr_)
 
 # Rationale
 
 This function can be used for extensions to parse indexes like
-"end-5", "12+1" ... See [TIP 502: Index Value Reform](502.md) and
+"`end-5`", "`12+1`" ... See [TIP 502: Index Value Reform](502.md) and
 [TIP 176: Add String index Values](176.md).
 
 Use case  in Tk: see
@@ -44,7 +43,7 @@ This is fully upwards compatible with Tcl 8.6.
 
 # Reference Implementation
 
-Available on branch [tip-544](https://core.tcl-lang.org/tcl/timeline?t=tip-544).
+Available on branch [tip-544](/tcl/timeline?t=tip-544).
 
 # Copyright
 
