--- a/tip/542.md
+++ b/tip/542.md
@@ -83,7 +83,7 @@ This document proposes:
 
      Tcl\_UniCharNcasecmp()
 
-   If Tcl is compiled with either -DTCL_UTF_MAX=4 or -DTCL_NO_DEPRECATED, those functions will no longer be available for extensions, as well as in Tcl 9.0.
+   If Tcl is compiled with either -DTCL\_UTF\_MAX=4 or -DTCL\_NO\_DEPRECATED, those functions will no longer be available for extensions, as well as in Tcl 9.0.
 
 
  * New functions:
