--- a/tip/262.md
+++ b/tip/262.md
@@ -1,14 +1,17 @@
 # TIP 262: Background Images for Frames
 	Author:         Eric Taylor <et2@rocketship1.com>
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        18-Mar-2006
 	Post-History:   
 	Keywords:       Tk,option
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-262
+	Votes-For:      DKF, FV, KBK, JN, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
