--- a/tip/431.md
+++ b/tip/431.md
@@ -1,13 +1,16 @@
 # TIP 431: Add 'tempdir' Subcommand to 'file'
 	Author:         Kevin Pasko <kevin.a.pasko@gmail.com>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-Sep-2014
 	Keywords:       Tcl, directory, file
 	Post-History:
 	Tcl-Branch:     tip-431
+	Votes-For:      DKF, FV, KBK, JN, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
