--- a/tip/383.md
+++ b/tip/383.md
@@ -2,14 +2,17 @@
 	Author:         Alexandre Ferrieux <alexandre.ferrieux@gmail.com>
 	Author:         Miguel Sofer <msofer@users.sourceforge.net>
 	Author:         Donal K. Fellows <dkf@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        03-Dec-2010
 	Post-History:   
 	Keywords:       debugging,coroutine,yielded
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-383
+	Votes-For:      DKF, KBK, JN
+	Votes-Against:  none
+	Votes-Present:  FV, SL
 -----
 
 # Abstract
