--- a/tip/383.md
+++ b/tip/383.md
@@ -2,7 +2,7 @@
 	Author:         Alexandre Ferrieux <alexandre.ferrieux@gmail.com>
 	Author:         Miguel Sofer <msofer@users.sourceforge.net>
 	Author:         Donal K. Fellows <dkf@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        03-Dec-2010
