--- a/tip/431.md
+++ b/tip/431.md
@@ -1,6 +1,6 @@
 # TIP 431: Add 'tempdir' Subcommand to 'file'
 	Author:         Kevin Pasko <kevin.a.pasko@gmail.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Tcl-Version:    8.7
 	Vote:           Done
