--- a/tip/262.md
+++ b/tip/262.md
@@ -1,7 +1,7 @@
 # TIP 262: Background Images for Frames
 	Author:         Eric Taylor <et2@rocketship1.com>
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        18-Mar-2006
